# xverif

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: performance.md
api/xverif/: index.html
docs/: index.md
docs/api/: xverif.md
docs/stylesheets/: extra.css
search/: search_index.json
tutorials/: 0_Intro.py  Dask task.ipynb  Z_TODO.py  debug_broadcast_stacking.py  dev_continuous_loop.py  dev_dask_tasks.py  dev_loop_vec.py  dev_routine.py  dev_workflow.py  example_dask_tasks.py  example_data_dropping.py  example_data_masking.py  example_datasets.py  notes_interface.py  notes_metrics.py  notes_preprocessing.py  verif_unstructured_grids.py
tutorials/OLD/: Dask task.ipynb  verif_unstructured_grids.py
xverif/: __init__.py  datasets.py  dropping.py  masking.py  preprocessing.py  spatial_summaries.py  wrappers.py  xverif.py  xverif_notes.py
xverif/deterministic/: categorical_metrics.py  continuous_metrics.py  dev_continuous.py  pysteps_spatial_metrics.py  spatial_metrics.py
xverif/metrics/deterministic/: __init__.py  binary_loop.py  binary_vectorized.py  categorical_binary.py  categorical_multiclass.py  continuous.py  continuous_loop.py  continuous_ndarray.py  continuous_stacked.py  continuous_vectorized.py  correlations.py  correlations_vectorized.py  dev_continuous.py  multiclass.py  multiclass_loop.py  multiclass_vectorized.py  names.py  ordered.py  probability.py
xverif/metrics/deterministic/OLD/: continuous.py  continuous_dag.py  continuous_ndarray.py  dev_continuous.py
xverif/metrics/probabilistic/: __init__.py  continuous.py  names.py
xverif/metrics/spatial/: pysteps_spatial_metrics.py  spatial.py
xverif/probabilistic/: continuous_metric.py
xverif/utils/: __init__.py  exceptions.py  forecast.py  spatial_summaries.py  timing.py  warnings.py  zarr.py
