[tool.poetry]
name = "xverif"
version = "0.1.0"
description = "Xarray-based package for forecasts/simulations verification"
authors = [
    "Gionata Ghiggi, <gionata.ghiggi@epfl.ch>",
    "Francesco Zanetta, <zanetta.francesco@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2023.4.2"
dask = { extras = ["distributed"], version = "^2023.4.1" }
numba = "^0.57.0"
rechunker = "^0.5.1"
flox = "^0.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.265"
black = "^23.3.0"
pre-commit = "^3.3.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.11"
mkdocstrings = { extras = ["python"], version = "^0.21.2" }
jupyter = "^1.0.0"
nbconvert = "^7.4.0"
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
fix = true
cache-dir = "~/.cache/ruff"
dummy-variable-rgx = "^_$"
exclude = ["docs/"]
ignore-init-module-imports = true
line-length = 88
select = [
    "D",   # docstrings
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "W",
    "YTT", # flake8-2020
    "B",   # flake8-bugbear
    "Q",   # flake8-quotes
    "PLE", # pylint
    "PLR",
    "PLW",
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "ISC", # implicit string concatenation
    "TCH", # type-checking imports
]
ignore = [
    "E402",
    "E731",
    "E501",
    "PGH001",
    "RET504",
    "S101",
    "F722",
    "PLR2004",
    "PLR0913",
]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
src = ["xverif", "tests", "tutorials"]
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "numpy"
